@@ -1,3 +1,8 @@
+Media Manager 1.0.1-1~bpo268
+
+	* Better descriptions in the component metafile
+	-- Charlie Powell <support@corepl.us>  Mon, 27 Feb 2017 04:07:12 -0500
+
 Media Manager 1.0.1
 
 	* [Bug] fix on media manager/navigator templates
